# mentee

./: .gitignore  Procfile  README.md  c  package.json  requirements.txt
backend/: Dockerfile  Makefile  README.md  firebase_service_key.json.PROD  manage.py  pyproject.toml  requirements-override.txt  requirements.txt  scripts.py  socketio_client.html  start
backend/api/: __init__.py  core.py
backend/api/models/: Admin.py  Announcement.py  AppointmentRequest.py  ApptRequest.py  Availability.py  BugReport.py  DirectMessage.py  Education.py  ErrorLog.py  Event.py  Hub.py  MenteeApplication.py  MenteeProfile.py  MentorApplication.py  MentorProfile.py  Message.py  NewMentorApplication.py  NewProfile.py  OAuthAccessToken.py  OAuthAuthorizationCode.py  OAuthClient.py  OAuthConsent.py  OAuthRefreshToken.py  PartnerApplication.py  PartnerProfile.py  Picture.py  Training.py  User.py  Users.py  VerifiedEmail.py  Video.py  VideoLinks.py  __init__.py
backend/api/utils/: admin_notification_emails.py  constants.py  email_sync.py  error_reporting.py  firebase.py  flask_imgur.py  google_storage.py  google_translate.py  oidc_keys.py  (+7 more)
backend/scripts/: __init__.py  emails.py  grant_oauth_scope.py  register_oauth_client.py
backend/tests/: test_admin.py  test_apply.py  test_appointments.py  test_auth.py  test_basic.py  test_events.py  test_explore.py  test_guest_auth.py  test_mentee_auth.py  test_mentor_auth.py  test_messages.py  test_oauth_profile.py  test_oauth_refresh.py  test_partner_auth.py  test_private.py  test_profile.py  test_training.py  test_verify_user.py  test_videos.py
(+337 files in other folders)
